--- a/utils/youtmdl-bash-completion.in
+++ b/utils/youtmdl-bash-completion.in
@@ -1,4 +1,4 @@
-_ytmdl_complete()
+_youtmdl_complete()
 {
     local cur_word prev_word type_list
 
@@ -10,8 +10,8 @@ _ytmdl_complete()
     cur_word="${COMP_WORDS[COMP_CWORD]}"
     prev_word="${COMP_WORDS[COMP_CWORD-1]}"
 
-    # Ask ytmdl to generate a list of types it supports
-    type_list="{{ytmdl_opts}}"
+    # Ask youtmdl to generate a list of types it supports
+    type_list="{{youtmdl_opts}}"
 
     # Only perform completion if the current word starts with a dash ('-'),
     # meaning that the user is trying to complete an option.
@@ -25,5 +25,5 @@ _ytmdl_complete()
     return 0
 }
 
-# Register _ytmdl_complete to provide completion for the following commands
-complete -F _ytmdl_complete ytmdl
+# Register _youtmdl_complete to provide completion for the following commands
+complete -F _youtmdl_complete youtmdl
