--- a/examples/config
+++ b/examples/config
@@ -1,5 +1,5 @@
 #*****************************************#
-#*-------------config for ytmdl-----------#
+#*-------------config for youtmdl-----------#
 #
 #-----------------------------------------#
 #------PLEASE DON'T LEAVE ANY BLANK LINES---#
